...
            <point key="canvasLocation" x="-1966" y="-766"/>
        </scene>
        <!--WishlistNavController-->
        <scene sceneID="L49-Xy-c3W">
            <objects>
                <navigationController title="WishlistNavController" id="Ew1-yq-imJ" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Wishlist" id="k1i-Pk-ElV">
                        <imageReference key="image" image="list.star" catalog="system" symbolScale="large"/>
                        <color key="badgeColor" systemColor="systemYellowColor"/>
                        <imageReference key="selectedImage" image="list.star" catalog="system" symbolScale="large"/>
                    </tabBarItem>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8dh-JL-4iz">
                        <rect key="frame" x="0.0" y="59" width="430" height="44"/>
...
            <point key="canvasLocation" x="-2344" y="-27"/>
        </scene>
        <!--HomeNavController-->
        <scene sceneID="p8Z-So-GY6">
            <objects>
                <navigationController title="HomeNavController" id="L2z-EZ-wOs" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Home" id="Sxa-s9-2UA">
                        <imageReference key="image" image="house" catalog="system" symbolScale="large"/>
                        <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <imageReference key="selectedImage" image="house" catalog="system" symbolScale="large"/>
                    </tabBarItem>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="naS-Cg-3OR">
                        <rect key="frame" x="0.0" y="59" width="430" height="44"/>
...
                            <constraint firstItem="c6v-Po-wwa" firstAttribute="trailing" secondItem="LCx-AO-G83" secondAttribute="trailing" constant="25" id="qF4-b9-8Uy"/>
                            <constraint firstItem="mW6-EK-dlJ" firstAttribute="top" secondItem="7C5-32-5p6" secondAttribute="bottom" constant="15" id="rYM-E8-33P"/>
                            <constraint firstItem="LCx-AO-G83" firstAttribute="leading" secondItem="c6v-Po-wwa" secondAttribute="leading" constant="25" id="uhO-Kp-DY6"/>
                            <constraint firstItem="7C5-32-5p6" firstAttribute="leading" secondItem="c6v-Po-wwa" secondAttribute="leading" constant="25" id="zP9-UI-W1n"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Wish I Watch" id="eYU-sB-ZO3">
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="search" id="Teu-et-6WR">
                            <color key="tintColor" systemColor="systemYellowColor"/>
                            <connections>
                                <segue destination="4V6-mn-Fzg" kind="show" id="1Zj-ws-rQm"/>
                            </connections>
                        </barButtonItem>
...
                <tableViewController title="SearchTableViewController" id="4V6-mn-Fzg" customClass="SearchTableViewController" customModule="Wish_I_Watch" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="dXN-WT-U6e">
                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <searchBar key="tableHeaderView" contentMode="redraw" barStyle="black" searchBarStyle="minimal" placeholder="Write a title..." id="Nyl-7D-6ai">
                            <rect key="frame" x="0.0" y="0.0" width="430" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <textInputTraits key="textInputTraits"/>
...
            <point key="canvasLocation" x="-2345.5813953488373" y="695.27896995708159"/>
        </scene>
        <!--HomeNavController-->
        <scene sceneID="Ufb-6c-Nuc">
            <objects>
                <navigationController title="HomeNavController" id="0Fw-kc-TsU" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" id="9Oo-0z-p0h">
                        <imageReference key="image" image="gearshape" catalog="system" symbolScale="large"/>
                        <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <imageReference key="selectedImage" image="gearshape" catalog="system" symbolScale="large"/>
                    </tabBarItem>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="zYp-DL-NqD">
                        <rect key="frame" x="0.0" y="59" width="430" height="44"/>
...
