...
                                        <rect key="frame" x="127" y="230" width="76" height="35"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="35" id="9l0-5I-eT4"/>
                                            <constraint firstAttribute="width" constant="76" id="SYG-kv-rTe"/>
                                        </constraints>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Details">
                                            <backgroundConfiguration key="background" cornerRadius="10">
                                                <color key="backgroundColor" systemColor="systemYellowColor"/>
                                            </backgroundConfiguration>
                                            <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </buttonConfiguration>
                                        <connections>
...
